<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pebble.pebblekitsportsapidemo.MainActivity">

    <TextView
        android:id="@+id/label_configure_sports"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:text="@string/label_configure_sports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/sports_configure_layout"
        android:orientation="vertical"
        android:layout_below="@id/label_configure_sports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_launch_sports"
                android:layout_weight="1"
                android:text="@string/button_launch_sports_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/dummy_data_sports"
                android:text="@string/button_dummy_data"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch_sports_units"
            android:text="@string/units"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switch_sports_pace"
            android:text="@string/pace"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_below="@id/sports_configure_layout"
        android:id="@+id/label_configure_golf"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:text="@string/label_configure_golf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/golf_configure_layout"
        android:orientation="vertical"
        android:layout_below="@id/label_configure_golf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_launch_golf"
                android:layout_weight="1"
                android:text="@string/button_launch_golf_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/dummy_data_golf"
                android:text="@string/button_dummy_data"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_below="@id/golf_configure_layout"
        android:id="@+id/label_status"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:text="@string/label_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/status"
        android:textSize="15sp"
        android:text="@string/status_none"
        android:layout_below="@id/label_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
